src/objects/SBQQ__WebQuote__c/fields/SBQQ__BillingName__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BillingName__c</fullName>
    <description>Name for the Bill To address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name for the Bill To address.</inlineHelpText>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>