src/objects/SBQQ__WebQuote__c/fields/SBQQ__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DocumentId__c</fullName>
    <description>ID of the Document record which contains the generated document.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of the Document record which contains the generated document.</inlineHelpText>
    <label>Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>