src/objects/SBQQ__WebQuote__c/fields/SBQQ__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ExpirationDate__c</fullName>
    <description>Date after which the Quote is no longer valid.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date after which the Quote is no longer valid.</inlineHelpText>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>